@@ -1,3 +1,9 @@
+2000-08-22  Brent Verner <brent@rcfile.org>
+
+	* src/Makefile.am (INCLUDES): Put $(CSHADOW_INCLUDES) before
+	$(top_srcdir)
+	* src/Makefile.in: Regenerate.
+	
 2000-08-21  Benjamin Kosnik  <bkoz@purist.soma.redhat.com>
 
 	* bits/codecvt.h: Implement codecvt<wchar_t, char, mbstate_t>. Fix
